# padded-number

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  lychee.toml  rustfmt.toml
.github/workflows/: ci.yaml  release.yaml
crates/facade/: Cargo.toml  README.md
crates/facade/src/: core.rs  display.rs  lib.rs
crates/facade/tests/: mod.rs
crates/internal/: Cargo.toml
crates/internal/src/: arithmetic.rs  core.rs  display.rs  error.rs  from_str.rs  lib.rs  ordering.rs  parse.rs  serde.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
