[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["gibbz00 <gabrielhansson00@gmail.com>"]
edition = "2024"
exclude = ["/.github"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/gibbz00/padded-number"
version = "0.2.0"

[workspace.dependencies]
# Workspace
padded-number-internal = { version = "0", path = "crates/internal" }
padded-number-macros = { version = "0", path = "crates/macros" }

# External
displaydoc = "0.2.5"
konst = { default-features = true, version = "0.3" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"

[workspace.lints.rust]
missing_docs = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
self_named_module_files = "warn"

[profile.dev]
debug = 0
strip = "debuginfo"
