[package]
name = "padded-number"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
macros = ["dep:padded-number-macros"]
serde = ["padded-number-internal/serde"]

[dependencies]
padded-number-internal.workspace = true
padded-number-macros = { workspace = true, optional = true }

[dev-dependencies]
padded-number = { path = ".", features = ["macros"] }

[lints]
workspace = true
