[package]
name = "padded-number-internal"

description = "Internal parse functions for the padded-number crate"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
displaydoc.workspace = true
konst = { workspace = true, features = ["cmp", "iter"] }
thiserror.workspace = true

[lints]
workspace = true
