[package]
name = "padded-number-macros"

description = "Procedual macros to be used in the padded-number crate"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
padded-number-internal.workspace = true

proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lints]
workspace = true
